crates/strider-analyze/tests/snapshots/v3__ppc32be__calling_convention__mixed_4.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100006ec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x10020000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "21" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "10" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "24" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "38" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x10020024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "40" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "42" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x10020024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "44" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "48" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "50" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "52" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "54" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "57" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "57" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "60" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
